--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@clerk/localizations": "1.26.15",
-    "@clerk/nextjs": "4.29.7",
+    "@clerk/nextjs": "^4.29.7",
     "@clerk/themes": "1.7.9",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -59,7 +59,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-stars": "^2.2.4",
-    "eslint": "^8",
+    "eslint": "^9.31.0",
     "eslint-config-next": "14.2.30",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
